# ChangeLog for sys-apps/man-pages
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.99 2007/12/06 15:08:50 vapier Exp $

*man-pages-2.70 (06 Dec 2007)

  06 Dec 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.70.ebuild:
  Version bump.

*man-pages-2.69 (04 Dec 2007)

  04 Dec 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.69.ebuild:
  Version bump.

*man-pages-2.68 (28 Nov 2007)

  28 Nov 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.68.ebuild:
  Version bump.

*man-pages-2.67 (23 Oct 2007)

  23 Oct 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.67.ebuild:
  Version bump.

*man-pages-2.66 (08 Oct 2007)

  08 Oct 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.66.ebuild:
  Version bump.

*man-pages-2.65 (17 Sep 2007)

  17 Sep 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.65.ebuild:
  Version bump.

*man-pages-2.64 (12 Aug 2007)

  12 Aug 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.64.ebuild:
  Version bump.

*man-pages-2.63 (20 Jul 2007)

  20 Jul 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.63.ebuild:
  Version bump.

*man-pages-2.62 (13 Jul 2007)

  13 Jul 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.62.ebuild:
  Version bump.

*man-pages-2.61-r1 (08 Jul 2007)

  08 Jul 2007; Mike Frysinger <vapier@gentoo.org>
  +files/man-pages-2.61-DESTDIR.patch, +man-pages-2.61-r1.ebuild:
  Fix install path #184600.

*man-pages-2.61 (07 Jul 2007)

  07 Jul 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.61.ebuild:
  Version bump.

*man-pages-2.60 (26 Jun 2007)

  26 Jun 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.60.ebuild:
  Version bump.

*man-pages-2.58 (25 Jun 2007)

  25 Jun 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.58.ebuild:
  Version bump.

  18 Jun 2007; Raúl Porcel <armin76@gentoo.org> man-pages-2.57.ebuild:
  Back to ~arch

*man-pages-2.57 (17 Jun 2007)
