@@ -16,18 +16,18 @@ EBUILD man-pages-2.68.ebuild 1426 RMD160 64aba58b66f75e43eb2de806b932f75245410d4
 MD5 503b69be26c9cd8dd7593570c01c8b2c man-pages-2.68.ebuild 1426
 RMD160 64aba58b66f75e43eb2de806b932f75245410d47 man-pages-2.68.ebuild 1426
 SHA256 d302da7a0c2e18f3a7539af7e1208d6801ea00fe1b262b9b7ddce4eb3b583cff man-pages-2.68.ebuild 1426
-EBUILD man-pages-2.69.ebuild 1426 RMD160 53d4f434b3b8d8007c7fcf56ecece08f7437de7f SHA1 97cdcbe1cff5d70f5cebc6b3794aa2b3ed131c31 SHA256 2ec2de042364db873cb21ba031544a50ef1257944ea0cb9eef76bbf5cfdb0388
-MD5 53859190a672877ff92179b15034a084 man-pages-2.69.ebuild 1426
-RMD160 53d4f434b3b8d8007c7fcf56ecece08f7437de7f man-pages-2.69.ebuild 1426
-SHA256 2ec2de042364db873cb21ba031544a50ef1257944ea0cb9eef76bbf5cfdb0388 man-pages-2.69.ebuild 1426
-EBUILD man-pages-2.70.ebuild 1439 RMD160 858e2fd6bac4fbcd86c270a13d485d566ac27721 SHA1 b540665c70fa1408e97af6404d565bb03185eaec SHA256 bdfe6efe3624384d4542f622abcaebea94f6cbfe242b7e11c6c6c10e90ee5825
-MD5 6e8ffc8d1ee29819e78d1a8612e28441 man-pages-2.70.ebuild 1439
-RMD160 858e2fd6bac4fbcd86c270a13d485d566ac27721 man-pages-2.70.ebuild 1439
-SHA256 bdfe6efe3624384d4542f622abcaebea94f6cbfe242b7e11c6c6c10e90ee5825 man-pages-2.70.ebuild 1439
-MISC ChangeLog 12507 RMD160 cb9d44f4d749fcb97aafcd6faf007a21931422de SHA1 47b1ff72f706304ddbfaa3e8a007dd20f9aec089 SHA256 a7b9153480cb0ec727583b7a8dc0b25837ef25c55218ed384b7ad5013665caba
-MD5 2b958f4ce511784142b0a8d62ace2e92 ChangeLog 12507
-RMD160 cb9d44f4d749fcb97aafcd6faf007a21931422de ChangeLog 12507
-SHA256 a7b9153480cb0ec727583b7a8dc0b25837ef25c55218ed384b7ad5013665caba ChangeLog 12507
+EBUILD man-pages-2.69.ebuild 1421 RMD160 188ac388b708e36a5bf647f1e6eb2aabd0abc896 SHA1 72c167965bf371def7ff46580a179708796f0b37 SHA256 0fabc5016d4c23f5175dd7d190e35c6c10bc4ce2e561df0e2e15fb1c7e6853cd
+MD5 a1894e42a1313004baab7d2cc9702776 man-pages-2.69.ebuild 1421
+RMD160 188ac388b708e36a5bf647f1e6eb2aabd0abc896 man-pages-2.69.ebuild 1421
+SHA256 0fabc5016d4c23f5175dd7d190e35c6c10bc4ce2e561df0e2e15fb1c7e6853cd man-pages-2.69.ebuild 1421
+EBUILD man-pages-2.70.ebuild 1434 RMD160 74acae5f3a9fffc184aa19019c0d3c14296681db SHA1 1238230cf929a787fd849696bf3038e317c16fcc SHA256 fa9cd8029ad909b51d774b5a206a418571a660f246de588c269e785ea83f5ca0
+MD5 cf1bef7c7d63e72aab58dae1966caa4a man-pages-2.70.ebuild 1434
+RMD160 74acae5f3a9fffc184aa19019c0d3c14296681db man-pages-2.70.ebuild 1434
+SHA256 fa9cd8029ad909b51d774b5a206a418571a660f246de588c269e785ea83f5ca0 man-pages-2.70.ebuild 1434
+MISC ChangeLog 12702 RMD160 fb0120d8c770321561dc7ed37c91665ac13a0344 SHA1 99c22702a282d289d1e4c0c0f839ef57dd97d349 SHA256 298713af13bfdcea14832faeff42cea716c89edeb09d56f81be3034fbd83a979
+MD5 9a2676adecee8ccee4b20a88ff338072 ChangeLog 12702
+RMD160 fb0120d8c770321561dc7ed37c91665ac13a0344 ChangeLog 12702
+SHA256 298713af13bfdcea14832faeff42cea716c89edeb09d56f81be3034fbd83a979 ChangeLog 12702
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
@@ -44,7 +44,7 @@ SHA256 4eef90a7c662b7fccfa13014ba1f618ad45bac4afd98650a0ca560a178a0485e files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFHWBCIp/wUKkr7RBoRAkDtAJ9ku+wk4bJPRrBynlcTOssbbHNi1QCgoBx3
-jmpBknzXZBAygWUwDKftMzk=
-=c3Bu
+iD8DBQFHWf+yp/wUKkr7RBoRAv56AJ9OYYpehplI7Jenbcp52B/nnORMNACglipE
+WAqWfpSue3qSA9mQczDZteY=
+=jK5f
 -----END PGP SIGNATURE-----
